# scop

./: .gitignore  CMakeLists.txt  Makefile  build.zig  build.zig.zon
shaders/: shader.frag  shader.vert
src/: main.c  main.zig  maths.h  obj_parser.c  obj_parser.h  types.h  util.h
